--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <h1 class="mt-5">Bienvenidos a Quinto Nocturna</h1>
     <p class="lead">¡Gracias por visitar nuestra página!</p>
+    <p class="lead">¡Quinto "A"!</p>
   </div>
 
   <!-- Agregar los enlaces a los archivos JavaScript de Bootstrap -->
